<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/back_btn"
        android:padding="25dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:id="@+id/prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_below="@+id/back_btn"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="25dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:fontFamily="@font/euclid_circular"
                android:textSize="22sp"
                android:textColor="@android:color/white"
                android:text="@string/sign_in_to_your_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="15dp"
                android:fontFamily="@font/euclid_circular"
                android:lineSpacingExtra="8dp"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:text="@string/sign_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:background="@drawable/home_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_marginBottom="25dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:translationZ="90dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="-5dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/euclid_circular"
                    android:text="@string/phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:background="@drawable/sign_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textColor="@color/black"
                        android:padding="15dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/def_no"
                        android:id="@+id/num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:contentDescription="@string/app_name"
                        android:layout_gravity="center"
                        android:src="@drawable/ng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <View
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_gravity="center"
                        android:id="@+id/vv"
                        android:background="#DADADA"
                        android:layout_width="3dp"
                        android:layout_height="25dp"/>

                    <EditText
                        android:id="@+id/edt1"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/ph_bg"
                        android:layout_marginStart="15dp"
                        android:padding="5dp"
                        android:inputType="phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="Autofill,LabelFor" />

                </LinearLayout>

                <TextView
                    android:translationZ="90dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="-5dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/euclid_circular"
                    android:text="@string/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/edt2"
                    android:padding="15dp"
                    android:background="@drawable/sign_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    tools:ignore="Autofill,LabelFor" />

                <Button
                    android:fontFamily="@font/euclid_circular"
                    android:id="@+id/btn"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_bg"
                    android:textAllCaps="false"
                    android:text="@string/sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="50dp"
                    android:textColor="@color/home"
                    android:fontFamily="@font/euclid_circular"
                    android:text="@string/for_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:fontFamily="@font/euclid_circular"
                        android:text="@string/dont_acc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginStart="5dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/home"
                        android:fontFamily="@font/euclid_circular"
                        android:text="@string/cre_acc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>