<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:weightSum="5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_weight="1"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:fontFamily="@font/euclid_circular"
            android:textColor="@color/colorPrimary"
            android:text="@string/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_wallet_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:fontFamily="@font/euclid_circular"
            android:textColor="@color/grey"
            android:text="@string/wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_swipe_wh"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_card_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:fontFamily="@font/euclid_circular"
            android:textColor="@color/grey"
            android:text="@string/setti_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_more_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:fontFamily="@font/euclid_circular"
            android:textColor="@color/grey"
            android:text="@string/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>